add user register, login, get profile functionality, fix local development cors issue
